apps/base/gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: osable
  labels:
    application: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      application: gateway
  template:
    metadata:
      labels:
        application: gateway
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: gateway
          image: registry.osable.net/osable/gateway:latest
          ports:
            - containerPort: 8081
