apps/base/gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: osable
spec:
  type: ClusterIP
  selector:
    application: gateway
  ports:
    - port: 8081
      targetPort: 8081
